fix: removing avatar img and fixing alignment

--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -70,9 +70,6 @@ body {
   font-weight: normal;
 }
 
-.avatar-pic {
-}
-
 .App .topnav .black-logo {
   display: block;
 }
@@ -116,14 +113,14 @@ body {
 }
 
 .App .app-intro {
-  font-size: 36px;
+  font-size: 40px;
 }
 
 .intro {
   padding: 100px;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .intro .intro-text {
@@ -132,7 +129,6 @@ body {
 
 
 .intro-text h3 {
-  float: right;
   margin: 60px 0px 10px 0px;
 }
 .intro-text p {
@@ -161,7 +157,7 @@ body {
 
 .cta-button:hover {
   background-color: black;
-  border: none;
+  border: 2px solid transparent;
   color: black;
 }
 
@@ -273,6 +269,7 @@ body {
   border-radius: 4px;
   font-size: 16px;
   outline: none;
+  cursor: pointer;
 }
 
 .create-form .submit-form:hover {
